feat(atlas): Grant temporary host access through Warpgate
